<resources>
    <string name="app_name">CricbuzzClone</string>
    <string name="matches">MATCHES</string>
    <string name="top_stories">TOP STORIES</string>
    <string name="fragment_home">HomeFragment</string>
    <string name="story_details_label">StoryDetailsFragment</string>
    <string name="info_fragment">INFO</string>
    <string name="live_fragment">LIVE</string>
    <string name="scorecard_fragment">SCORECARD</string>
    <string name="squads_fragment">SQUADS</string>
    <string name="overs_fragment">OVERS</string>
    <string name="squads">SQUADS</string>
    <string name="match">Match</string>
    <string name="series">Series</string>
    <string name="referee">referee</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="toss">Toss</string>
    <string name="venue">Venue</string>
    <string name="umpires">Umpires</string>
    <string name="iiirdUmpire">3rd Umpire</string>
    <string name="venueguide">VENUE GUIDE</string>
    <string name="stadium">Stadium</string>
    <string name="city">City</string>
    <string name="capacity">Capacity</string>
    <string name="ends">Ends</string>
    <string name="host">Host to</string>
    <string name="tvguide">TV GUIDE - IN</string>
    <string name="streaming">Streaming</string>
    <string name="tv">TV</string>
    <string name="info">INFO</string>
    <string name="bench">Bench</string>
    <string name="playing_xi">Playing XI</string>
    <string name="staff">Staff</string>
    <string name="player_of_the_match">Player of the match</string>
    <string name="all_stories">ALL STORIES</string>
    <string name="categories_fragment">CATEGORIES</string>
    <string name="premium_fragment">PREMIUM</string>
    <string name="topics_fragment">TOPICS</string>
    <string name="fragment_news">NewsFragment</string>
    <string name="fragment_all_stories">AllStoriesFragment</string>
    <string name="fragment_premium_stories">PremiumNewsFragment</string>
    <string name="fragment_categories_child">CategoryChildFragment</string>
    <string name="fragment_topics_child">TopicsChildFragment</string>
    <string name="news">News</string>
    <string name="current_matches">Current Matches</string>
    <string name="live_matches_fragment">LIVE</string>
    <string name="upcoming_matches_fragment">UPCOMING</string>
    <string name="recent_matches_fragment">RECENT</string>
    <string name="fragment_matches">MatchesFragment</string>
    <string name="liveMatchesFragment">LiveMatchesFragment</string>
    <string name="upcomingMatchesFragment">UpcomingMatchesFragment</string>
    <string name="recentMatchesFragment">RecentMatchesFragment</string>
    <string name="liveFragment">LiveFragment</string>
    <string name="infoFragment">InfoFragment</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="league">League</string>
    <string name="domestic">Domestic</string>
    <string name="women">Women</string>
    <string name="no_matches_available">No matches available</string>
    <string name="player_of_the_series">Player of the series</string>
    <string name="crr">CRR</string>
    <string name="rrr">REQ</string>
</resources>