<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="presenter"
            type="com.chaudharylabs.cricbuzzclone.ui.matches.recent.RecentMatchesFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_light"
        tools:context=".ui.matches.recent.RecentMatchesFragment">

        <HorizontalScrollView
            android:id="@+id/hsv_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light_black"
            android:scrollIndicators="none"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_recent_all"
                    style="@style/greenChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/averta_regular"
                    android:text="@string/all"
                    android:textAlignment="center"
                    android:textColor="@color/bottom_nav_text_selector"
                    android:textSize="13sp"
                    app:checkedIconEnabled="false"
                    app:chipCornerRadius="50dp"
                    app:chipIconEnabled="false"
                    app:chipStrokeColor="@color/bottom_nav_text_selector"
                    app:chipStrokeWidth="1dp"
                    app:chipSurfaceColor="@color/chip_bg_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_recent_international"
                    style="@style/greenChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averta_regular"
                    android:text="@string/international"
                    android:textAlignment="center"
                    android:textColor="@color/bottom_nav_text_selector"
                    android:textSize="13sp"
                    app:checkedIconEnabled="false"
                    app:chipCornerRadius="50dp"
                    app:chipIconEnabled="false"
                    app:chipStrokeColor="@color/bottom_nav_text_selector"
                    app:chipStrokeWidth="1dp"
                    app:chipSurfaceColor="@color/chip_bg_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_recent_league"
                    style="@style/greenChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averta_regular"
                    android:text="@string/league"
                    android:textAlignment="center"
                    android:textColor="@color/bottom_nav_text_selector"
                    android:textSize="13sp"
                    app:checkedIconEnabled="false"
                    app:chipCornerRadius="50dp"
                    app:chipIconEnabled="false"
                    app:chipStrokeColor="@color/bottom_nav_text_selector"
                    app:chipStrokeWidth="1dp"
                    app:chipSurfaceColor="@color/chip_bg_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_recent_domestic"
                    style="@style/greenChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averta_regular"
                    android:text="@string/domestic"
                    android:textAlignment="center"
                    android:textColor="@color/bottom_nav_text_selector"
                    android:textSize="13sp"
                    app:checkedIconEnabled="false"
                    app:chipCornerRadius="50dp"
                    app:chipIconEnabled="false"
                    app:chipStrokeColor="@color/bottom_nav_text_selector"
                    app:chipStrokeWidth="1dp"
                    app:chipSurfaceColor="@color/chip_bg_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_recent_women"
                    style="@style/greenChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averta_regular"
                    android:text="@string/women"
                    android:textAlignment="center"
                    android:textColor="@color/bottom_nav_text_selector"
                    android:textSize="13sp"
                    app:checkedIconEnabled="false"
                    app:chipCornerRadius="50dp"
                    app:chipIconEnabled="false"
                    app:chipStrokeColor="@color/bottom_nav_text_selector"
                    app:chipStrokeWidth="1dp"
                    app:chipSurfaceColor="@color/chip_bg_color" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/hsv_chip">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_typeMatches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/tv_fake"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_fake"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_Empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.06"
            android:text="@string/no_matches_available"
            android:textColor="@color/primary_soft"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>